Thu Aug 28 00:18:46 BST 2003  Colin Watson  <cjwatson@debian.org>

	* src/globbing.c (usage): Expand "sec" to "section".

Wed Aug 27 00:50:07 BST 2003  Giuseppe Sacco  <eppesuig@debian.org>

	* po/it.po: Remove all fuzzy translations and insert missed ones.
	  Now this translation will be reviewed by the Italian translation
	  project for proofreading.

Tue Aug 26 20:16:23 BST 2003  Colin Watson  <cjwatson@debian.org>

	* Version: 2.4.2-pre1 (for translators).
	* docs/NEWS: Mention pipeline library.

Sat Aug 16 14:07:46 BST 2003  Colin Watson  <cjwatson@debian.org>

	* src/lexgrog.l (find_name): Report a sensible error if file is a
	  directory.

Fri Aug 15 18:11:06 BST 2003  Colin Watson  <cjwatson@debian.org>

	* src/check_mandirs.c (test_manfile): file is const.
	* src/check_mandirs.h (test_manfile): Update prototype.
	* src/mandb.c (update_one_file): filename is const.

Fri Aug 15 18:05:37 BST 2003  Colin Watson  <cjwatson@debian.org>

	* include/manconfig.h.in: Remove incorrect prototype of basename()
	  which was hiding several bugs.
	* configure.in: Check for <libgen.h>.
	* lib/pipeline.c, src/accessdb.c, src/catman.c, src/check_mandirs.c,
	  src/filenames.c, src/lexgrog.l, src/man.c, src/mandb.c,
	  src/manpath.c, src/straycats.c, src/whatis.c, zsoelim/zsoelim.l:
	  Include <libgen.h> instead of relying on basename() prototype in
	  manconfig.h.
	* src/check_mandirs.c (test_manfile), src/man.c (local_man_loop),
	  src/straycats.c (check_for_stray): Copy strings before calling
	  basename() on them.

Fri Aug 15 00:16:13 BST 2003  Colin Watson  <cjwatson@debian.org>

	* src/ult_src.c (ult_hardlink): Return a newly allocated string
	  rather than messily copying over an existing one (and possibly
	  corrupting the malloc arena). link and dir are now allocated
	  rather than being declared as arrays.
	  (ult_src): Update call to ult_hardlink(). Return 'const char *' to
	  make sure callers aren't messing about with our memory.